k8s/mediaserver/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: mediaserver
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr:6.0.4
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /movies
              name: movies
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-pvc-pve
        - name: movies
          nfs:
            server: nas.enricoruggieri.com
            path: /tank/media/movies
        - name: downloads
          nfs:
            server: nas.enricoruggieri.com
            path: /tank/media/torrents/
