k8s/mediaserver/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: mediaserver
spec:
  type: LoadBalancer
  selector:
    app: radarr
  ports:
    - port: 7878
