k8s/mediaserver/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: mediaserver
  annotations:
   cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  rules:
    - host: "radarr.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: radarr-service
                port:
                  number: 7878
  tls:
  - hosts:
    - radarr.enricoruggieri.com
    secretName: radarr-cert-tls
